--- a/signup.html
+++ b/signup.html
@@ -117,7 +117,7 @@
 
                 <button class="w-100 btn btn-primary btn-lg" type="submit">Continue</button>
             </form>
-            <a class="lin" href="index.html" style="color: black; text-decoration: none; font-weight: bold;">Back to
+            <a class="lin" href="index.html" style="color: black; text-align: center; text-decoration: none; font-weight: bold;">Back to
                 Home</a>
         </div>
     </div>
